Add tests for NoGradient support in Java custom gradients